# ceps

./: .gitignore  README.md  cep#-1 Ultimate Purpose of Company.md  cep#201 git commit log standard.md  cep-0 Index of Codustry Enhancement Proposals.md  cep-1 CEP Purpose and Guidelines.md  cep-100 Protocol of Joining Codustry.py  cep-1000 Third Parties Software-Platform-Services Directory.md  cep-101 Individual Security Practice.md  cep-16  cep-16 The Zen of Codustry.md  cep-16.md  cep-2 Contribution And Compensation.md   pyproject.toml
codustry/: __init__.py
codustry/models/: craftsman.py
codustry/rules/compensate/: salary.py
codustry/rules/etiquette/: communication.py
