[tool.poetry]
name = "codustry"
version = "0.1.0"
description = "codustry protocals"
authors = ["Nutchanon Ninyawee <nutchanon@codustry.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.6.1"
autoname = "^0.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
